--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "load": "git pull"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
