--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.3",
+    "debounce": "^2.2.0",
     "gltfjsx": "^6.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
